# TSS-bot

./: .gitignore  LICENSE  README.md  bot.py  config.py  database.py  main.py  pyproject.toml  requirements.txt
cogs/: fun.py  help.py  leveling_economy.py  moderation.py  study.py  utility.py  welcome_tickets.py
