[project]
name = "tss-bot"
version = "1.0.0"
description = "ᏖᏕᏕ — your favorite all-in-one cutie Discord bot"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.7.1",
    "aiosqlite>=0.22.1",
    "aiohttp>=3.14.1",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.55",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
